--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,14 +9,13 @@
     tools:context=".SplashScreenActivity" >
 
     <ImageView
-        android:id="@+id/splashLogo"
-        android:layout_width="161dp"
-        android:layout_height="151dp"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="290dp"
-        android:layout_marginEnd="125dp"
-        android:layout_marginBottom="290dp"
-        android:contentDescription="@string/app_logo"
+        android:id="@+id/splashImage"
+        android:layout_width="164dp"
+        android:layout_height="164dp"
+        android:layout_marginStart="123dp"
+        android:layout_marginTop="283dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="284dp"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
